# loxtite

./: CMakeLists.txt  Makefile  README.md  Scanner.cpp  Scanner.h  Token.h  ast_ast.py  build_instructions.txt  expressions.loxt  fib2.ll  hello.loxt  loxtite_dialect.tb  mlir_output
dialect/: MLoopDialect.cpp  MLoopDialect.cpp.inc  MLoopDialect.h  MLoopDialect.h.inc  MLoopOps.cpp.inc  MLoopOps.h.inc  Ops.td
examples/: controlflow.loxt  dialect.loxt  factorial.loxt  fib.loxt  fib2.loxt  hello.loxt  if.loxt  simple_if.loxt
examples/c_examples/: main.c
examples/python/: fib.py
include/: AstLowering.h  AstPrinter.h  Expr.h  Loxtite.h  Parser.h  Scanner.h  Stmt.h  Token.h  TokenType.h
src/: AstLowering.cpp  AstPrinter.cpp  Loxtite.cpp  Parser.cpp  Scanner.cpp  Token.cpp  main.cpp
